--- a/mendel/angular/src/app/main/main.scss
+++ b/mendel/angular/src/app/main/main.scss
@@ -1,11 +1,6 @@
 #main {
   $action-bar-height: 3.5rem;
   $action-bar-system-height: 2.5rem;
-  position: fixed;
-  top: 54px;
-  left: 0;
-  bottom: 0;
-  right: 0;
   h2 {
     font-size: 1.1rem;
     font-weight: 700;
@@ -15,9 +10,6 @@
     font-weight: 800;
     color: darken($gunmetal, 10%);
     font-size: 0.8rem;
-  }
-  .full-height {
-    height: 100%;
   }
   .action-bar {
     border-bottom: 1px solid #dfdfdf;
@@ -41,10 +33,8 @@
     }
   }
   .subject-column {
-    min-height: 100%;
   }
   .categories-column {
-    min-height: 100%;
     & .categories-system-actions {
       padding: 0;
       & .system-action {
